--- a/style.css
+++ b/style.css
@@ -1600,7 +1600,7 @@ form input[type="reset"]:focus {
   
 }
 .site-header .bottom-header {
-  background-color: #ff0000;
+  background-color: #000000;
   zoom: 1;
   padding: 5px 0;
 }
@@ -1818,25 +1818,12 @@ form input[type="reset"]:focus {
   height: 0;
 }
 .hero-slider .slides li {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  min-height: 50vh;
+  float: left;
+  margin-right: -100%;
   width: 100%;
-  height: 100vh; /* Adjust height as needed */
-}
-
-@media (min-resolution: 2dppx) {
-  .hero-slider .slides li[data-bg-image="image0/hero-slider-1.jpg"] {
-    background-image: url('image0/hero-slider-1@2x.jpg');
-  }
-  .hero-slider .slides li[data-bg-image="image0/hero-slider-2.jpg"] {
-    background-image: url('image0/hero-slider-2@2x.jpg');
-  }
-  .hero-slider .slides li[data-bg-image="image0/hero-slider-3.jpg"] {
-    background-image: url('image0/hero-slider-3@2x.jpg');
-  }
-}
-
+  background-size: cover;
+  background-position: center center;
 }
 .hero-slider .slide-content {
   border-radius: 3px;
@@ -1898,6 +1885,7 @@ form input[type="reset"]:focus {
 
 .fullwidth-block {
   padding: 10px 0;
+  
 }
 
 .section-title,
@@ -2044,22 +2032,22 @@ form input[type="reset"]:focus {
   height: 0;
 }
 .testimonial-slider blockquote {
-  font-size: 10px;
-  font-size: 1.875em;
+  font-size: 3vh;
+  font-size: 3vh;
   text-align: center;
 }
 .testimonial-slider blockquote cite {
-  font-size: 5px;
-  font-size: 0.5375rem;
+  font-size: 3vh;
+  font-size: 3vh;
   text-transform: uppercase;
-  margin-top: 30px;
+  margin-top: 10px;
   display: block;
   font-style: normal;
-  color: #2a8f029d;
+  color: #ffffff;
 }
 .testimonial-slider .flex-control-nav {
   position: absolute;
-  bottom: 30px;
+  bottom: 0px;
   width: 100%;
   text-align: center;
   list-style: none;
@@ -2072,7 +2060,7 @@ form input[type="reset"]:focus {
 .testimonial-slider .flex-control-nav li a {
   overflow: hidden;
   text-indent: -9999px;
-  background: #fd0101;
+  background: #3d30f3;
   border-radius: 50%;
   display: block;
   width: 15px;
@@ -2095,17 +2083,26 @@ form input[type="reset"]:focus {
 
 .page {
   padding: 50px 0;
+  
 }
 .page .entry-title {
   font-size: 48px;
   font-size: 3em;
   font-weight: 300;
+  color: #000;
 }
 .page p {
   line-height: 2;
+  
+}
+.page li {
+  color: #000;
+
+
 }
 .page .row {
   margin: 25px -15px;
+  
 }
 
 .features {
@@ -2439,7 +2436,7 @@ form input[type="reset"]:focus {
 }
 
 .top-header {
-  background: linear-gradient(160deg, #16854b, #16854b, #16854b);
+  background: linear-gradient(160deg, #300bff71, #00000071, #300bff71);
   background-size: 600% 600%;
 
   -webkit-animation: AnimationName 9s ease infinite;
@@ -2464,7 +2461,7 @@ form input[type="reset"]:focus {
 }
 
 
-.rimsha-title{
+.pharmaron-title {
   font-weight: 600;
   color: #0B3D9D;
 
