--- a/style.css
+++ b/style.css
@@ -1809,6 +1809,7 @@ form input[type="reset"]:focus {
 .hero-slider .slides {
   list-style: none;
   zoom: 1;
+
 }
 .hero-slider .slides:after {
   content: " ";
@@ -1822,8 +1823,9 @@ form input[type="reset"]:focus {
   float: left;
   margin-right: -100%;
   width: 100%;
-  background-size: cover;
-  background-position: center center;
+  background-size: auto;
+  background-position: center;
+  background: scroll;
 }
 .hero-slider .slide-content {
   border-radius: 3px;
